# textpower

./: .env.example  .gitignore  README.md  config.json.example  docker-compose.yml  pyproject.toml  run.bat  run.sh
textpower/: __main__.py
textpower/api/: functions.py  main.py
textpower/api/chains/: chat.py
textpower/api/complex/: complex.py  es.py
textpower/api/function/: chat.py
textpower/api/response/: code.py  exception.py  result.py
textpower/complex/config/: api_settings.py  api_settings_inventory.py  system_settings.py
textpower/complex/response/: exception.py  result.py
textpower/complex/schema/: chats.py
textpower/complex/utils/: convert_util.py  init.py
textpower/feature/: inventory.py
textpower/feature/embeddings/: baichuan.py  embedding_creator.py  openai.py  qwen.py
textpower/feature/llms/: baichuan_chat.py  llm_creator.py  openai_chat.py  qwen.py
textpower/feature/manager/: elasticsearch.py  redis.py
textpower/feature/memory/: elasticsearch.py  redis.py
textpower/feature/memory/redis/: redis_manager.py
textpower/feature/models/chat_models/: baichuan.py  chat_model_creator.py  openai.py  qianfan.py  qwen.py  spark.py
textpower/feature/models/embeddings/: embedding_creator.py  qianfan.py
textpower/feature/models/llms/: llm_creator.py  openai.py  qianfan_chat.py  spark.py
textpower/feature/vector/: elasticsearch.py  pinecone.py
textpower/function/chains/: chat.py
textpower/function/complex/: es.py
textpower/function/prompts/: chat.py
